--- a/UI/css/orders.css
+++ b/UI/css/orders.css
@@ -10,15 +10,17 @@ body {
   overflow: hidden;
   background-color:orange;
   color: green;
+  padding: 0 100px;
+  
 }
 .topnav h1{
     float: left;
-    margin: auto;
-    padding: 10px;
-    text-transform: capitalize;
-    color: white;
+    padding: 6px;
+    color: orange;
     font-size: 20px;
     background-origin: padding-box;
+    border-radius: 50%;
+    background-color: #ffffff;
 }
 .topnav a {
   float: right;
@@ -41,7 +43,6 @@ body {
 .content {
 margin: -35px 100px;
 min-height: 80vh;
-/* background-color: #ffffff; */
 padding: 45px;
 }
 
@@ -51,11 +52,15 @@ color: #d3d3d3;
 }
 .orders .m2 {
 border-bottom: 3px solid lightgray;
-/* padding: 10px; */
 margin-bottom: 10px;
-/* background-color:  rgb(255, 168, 7); */
 color: lightgrey;
 text-align: center;
+}
+
+.orders .m2 .self, .mail, .contact, .primary_address{
+  text-align: left;
+  color: #ffffff;
+  margin: 0 0 5px 0;
 }
 .order-item {
 margin: 10px 0;
@@ -87,7 +92,7 @@ margin-bottom: 5px;
 font-size: 14px;
 
 }
-.Cancel-button, .Order-button{
+.Cancel-button, .Order-button, .status-button{
 padding: 5px;
 color: #ffffff;
 font-weight: bold;
@@ -147,8 +152,78 @@ border-top: 1px solid #CCCCCC;
 border-right: 1px solid #333333;
 border-bottom: 1px solid #333333;
 border-left: 1px solid #CCCCCC;
-
 }
+
+#map{
+  width: 100%;
+  height: 400px;
+  background-color: #d3d3d3;
+}  
+.user{
+  display: flex;
+}
+.user .sender {
+  flex: 2;
+}
+
+.content1 .details {
+  display: block !important;
+}
+.user .recipient{
+ flex: 2;
+}
+
+.user .sender h2, .recipient h2, .details h2{
+  color:white;
+}
+
+.topnav .search-container {
+  float: right;
+}
+
+.topnav input[type=text] {
+  padding: 6px;
+  margin-top: 14px;
+  font-size: 17px;
+  border: none;
+}
+
+.topnav .search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 14px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .search-container button:hover {
+  background: #ccc;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav .search-container {
+    float: none;
+  }
+  .topnav a, .topnav input[type=text], .topnav .search-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;  
+  }
+}
+
+.status-button{
+  display: inline-block;
+}
+
 
   
   
