--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -195,3 +195,27 @@ width: 10%;
 .price span{
   color: white;
 }
+
+@media screen and (max-width: 600px) {
+  .menu .field{
+    display: block;
+    margin-bottom: 100px;
+    margin-top: 6px;
+    width: 80%;
+    margin-left: 0px;
+
+  }
+  .price{
+    margin: 120px -50px 10px 10px;
+    padding: 30px; 
+  }
+  .order-item .field{
+    width: 100%;
+  }
+  .price label, .price span{
+    margin: -25px;
+
+  }
+  
+}
+  
