--- a/UI/css/orders.css
+++ b/UI/css/orders.css
@@ -1,10 +1,13 @@
 * {box-sizing: border-box;}
 body {
-  margin: 0;
+  background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../images/parcel.jpg");
+  background-size: cover;
+  background-repeat: repeat;
+  margin-bottom: -35px;
   font-family: Arial, Helvetica, sans-serif;
-  width: 100%;
-  min-height: 100vh;
-  background-color: grey;
+  width: 99%;
+  min-height: 10vh; 
+  
 }
 .topnav {
   overflow: hidden;
@@ -42,7 +45,7 @@ body {
 
 .content {
 margin: -35px 100px;
-min-height: 80vh;
+min-height: 60vh;
 padding: 45px;
 }
 
@@ -224,13 +227,6 @@ border-left: 1px solid #CCCCCC;
   display: inline-block;
 }
 
-@media screen and (max-width:300px) {
-  .topnav h1{
-    float:left;
-    margin-left:5px;
-  }
-
-}
 
 
   
