--- a/UI/css/orders.css
+++ b/UI/css/orders.css
@@ -118,12 +118,11 @@ border-bottom: 2px solid lightgray;
 float: none;
 }
 .topnav a,.topnav input[type=text], .topnav .search-container button {
-
-display: block;
-text-align: left;
-width: 100%;
-margin: 0;
-padding: 14px;
+  display: block;
+  text-align: left;
+  width: 100%;
+  margin: 10px;
+  padding: 14px;
 }
 .topnav input[type=text] {
 border: 1px solid #ccc; 
