--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -1,10 +1,12 @@
 * {box-sizing: border-box;}
 body {
+  background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../images/parcel.jpg") ;
+  background-size: cover;
+  background-repeat: no-repeat;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
   min-height: 100vh;
-  background-color: grey;
 }
 .topnav {
   overflow: hidden;
@@ -21,7 +23,6 @@ body {
     border-radius: 50%;
     background-color: #ffa500;
     border: 2px solid #ffffff;
-    
 }
 .topnav a {
   float: right;
@@ -31,7 +32,6 @@ body {
   padding:  22px;
   text-decoration: none;
   font-size: 16px;
-  
 }
 .topnav a:hover {
   background-color: grey;
@@ -56,12 +56,12 @@ body {
 .form{
   position: relative;
   z-index: 1;
-  background: grey;
+  background: rgb(red, green, blue);
   max-width: 760px;
   margin: 0 auto 80px;
   padding: 22px;
   text-align: center;
-  margin-top: -45px;
+  margin-top: auto;
   border-radius: 5px;
   color: #ffffff;
 }
@@ -113,7 +113,10 @@ body {
   }
 }
 @media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
+  .text {
+    font-size: 11px;
+
+  }
 }
 .footer {
     height: 60px;
@@ -125,7 +128,6 @@ body {
     color: black;
     text-align: center;
     padding: 10px;
-
 }
 
 @media screen and (max-width: 600px) {
@@ -136,7 +138,7 @@ body {
     display: block;
     text-align: left;
     width: 100%;
-    margin: 0;
+    margin: 10px;
     padding: 14px;
   }
   .topnav input[type=text] {
